--- a/Ajedrez/MainWindow.xaml
+++ b/Ajedrez/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ajedrez"
         mc:Ignorable="d"
-        Title="Ajedrez" Height="680" Width="1000" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="Icono.png">
+        Title="Ajedrez" Height="690" Width="1000" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="Icono.png">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="Recursos\Fondo.jpg"/>
@@ -27,6 +27,9 @@
         <Grid Height="50" Grid.Row="1" Margin="0,10,61.515,0" VerticalAlignment="Top" d:LayoutOverrides="Height" HorizontalAlignment="Right" Width="130.186">
             <RadioButton Name ="JugadorRojo" Foreground="White" Content="Jugador Rojas" Margin="10,0,-10,0" IsChecked="True"/>
             <RadioButton Name ="JugadorNegro" Margin="10,20,-10,0" Foreground="White" Content="Jugador Negras"></RadioButton>
+        </Grid>
+        <Grid Margin="10,5,0,0" Height="46" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="181">
+            <TextBlock Name ="Ganan" Text="" FontSize="28" Foreground="White"></TextBlock>
         </Grid>
         <Grid Name="Rojos" HorizontalAlignment="Left" Margin="31.702,56,0,5" Height="550" Width="137.5" Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -116,7 +119,7 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2">
-            <TextBlock Name="Informacion" FontSize="15" Foreground="DarkGoldenrod" Text="Posición: x,y ; Pieza: Torre; Gana: Blancas; Turno: Blancas; Tiempo: 14:53:00" />
+            <TextBlock Name="Informacion" FontSize="15" Foreground="RoyalBlue" Text ="Coordenadas del Juego:" />
         </StackPanel>
     </Grid>
 </Window>
